--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,9 @@ jobs:
         run: npm ci
 
       - name: Build bundle
-        run: npm run build
+        run: |
+          npm run build
+          npm run build:react
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
