--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - master
-      - main
+      - claude/add-tests-react-migration-NepTq
   workflow_dispatch:
 
 permissions:
@@ -32,8 +31,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build bundle
-        run: npm run build
+      - name: Build React bundle
+        run: npm run build:react
+
+      - name: Copy React index as main index
+        run: cp index-react.html index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
